Bug 1511878 - Start respecting the alpha channel for disabled control text color on macOS to accommodate the way this system color is declared by the OS on macOS 10.14+. r=mstange, a=RyanVM

--HG--
extra : source : 62f90a1062e5d87c38c5431c17af6fbdd8c7b059